--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "aos": "^2.3.4",
     "react": "^18.2.0",
     "react-countup": "^6.5.0",
