--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "aos": "^2.3.4",
     "react": "^18.2.0",
     "react-countup": "^6.5.0",
