--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^4.12.0",
     "react-slick": "^0.29.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "ua-parser-js": "^2.0.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
